# IROS2026

./: .gitignore  README.md
earth-rover-hybrid-autonomy/: .env.example  .gitignore  README.md  pyproject.toml  requirements-segmentation.txt  requirements.txt
earth-rover-hybrid-autonomy/configs/: default.yaml  traversability_dataset_v1.yaml  traversability_label_contract.yaml  traversability_segformer_b0_v1.yaml  traversability_segformer_b0_v2.yaml  traversability_semantic_mapping.yaml  traversability_temporal_inference_v1.yaml  urban.yaml  urban_latency_2s.yaml
earth-rover-hybrid-autonomy/scripts/: audit_phase2_alignment.sh  build_manual_candidates_v2.sh  build_traversability_annotation_100.sh  build_traversability_dataset_v2.sh  build_traversability_hard_examples_v1.sh  download_frodobots_subset.py  import_validate_manual_traversability_v2_33.sh  import_validate_traversability_annotation_100.sh  import_validate_traversability_review.sh  run_delayed_replay.py  run_phase3_small_baseline.sh  run_replay.py  run_sdk_smoke_test.py  run_traversability_annotation_pilot.sh  run_traversability_pilot.sh  run_traversability_segformer_b0_v1.sh  run_traversability_segformer_b0_v2.sh  run_traversability_temporal_inference_v1.sh  run_traversability_video_review_v2.sh  run_urban_mvp.py  select_manual_candidates_v2.sh  setup_traversability_pilot.sh  teleop_dashboard.py  verify_phase1_manifest.sh  verify_phase2_hls_loader.sh  verify_phase3_tiny_overfit.sh  view_sdk_camera.py  visualize_log.py
earth-rover-hybrid-autonomy/tests/: conftest.py  test_action_labels.py  test_gps_utils.py  (+26 more)
(+109 files in other folders)
